added header, sidebar, main-content divs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="body">Hello</div>
+    <div class="page">Hello
+        <div class="header">
+            Header
+        </div>
+
+        <div class="sidebar">
+            Sidebar
+        </div>
+
+        <div class="main-content">
+            Content
+        </div>
+    </div>
+
 </body>
 </html>
