added links on sidebars

--- a/index.html
+++ b/index.html
@@ -8,21 +8,33 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/e474898659.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="page">Hello
+    <div class="page">
         <div class="header">
             Header
         </div>
 
         <div class="sidebar">
-            Sidebar
+            Dashboard
+            <ul>
+                <li><i class="fa-solid fa-house"></i> Home</li>
+                <li><i class="fa-solid fa-user"></i> Profile</li>
+                <li><i class="fa-solid fa-message"></i> Messages</li>
+                <li><i class="fa-solid fa-clock"></i> History</li>
+                <li><i class="fa-solid fa-list-check"></i> Tasks</li>
+                <li><i class="fa-solid fa-user-group"></i> Communities</li>
+
+                <li><i class="fa-solid fa-gear"></i> Settings</li>
+                <li><i class="fa-solid fa-circle-question"></i> Support</li>
+                <li><i class="fa-solid fa-shield"></i> Privacy</li>
+            </ul>
         </div>
 
         <div class="main-content">
             Content
         </div>
     </div>
-
 </body>
 </html>
