added div class options around list of links

--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
         </div>
 
         <div class="sidebar">
-            Dashboard
-            <ul>
-                <li><i class="fa-solid fa-house"></i> Home</li>
-                <li><i class="fa-solid fa-user"></i> Profile</li>
-                <li><i class="fa-solid fa-message"></i> Messages</li>
-                <li><i class="fa-solid fa-clock"></i> History</li>
-                <li><i class="fa-solid fa-list-check"></i> Tasks</li>
-                <li><i class="fa-solid fa-user-group"></i> Communities</li>
+            <p>Dashboard</p>
 
-                <li><i class="fa-solid fa-gear"></i> Settings</li>
-                <li><i class="fa-solid fa-circle-question"></i> Support</li>
-                <li><i class="fa-solid fa-shield"></i> Privacy</li>
-            </ul>
+            <div class="options">
+                <ul class="dash">
+                    <li><a href="https://google.com"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-user"></i> Profile</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-message"></i> Messages</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-clock"></i> History</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-list-check"></i> Tasks</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-user-group"></i> Communities</a></li>
+                
+                    <li><a href="https://google.com"><i class="fa-solid fa-gear"></i> Settings</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-circle-question"></i> Support</a></li>
+                    <li><a href="https://google.com"><i class="fa-solid fa-shield"></i> Privacy</a></li>
+                </ul>
+            </div>
         </div>
 
         <div class="main-content">
